noinst_LTLIBRARIES = libcernstuff.la

noinst_HEADERS = \
	kernnum/pilot.h \
	fact.inc \
	feqn.inc \
	finv.inc \
	sfactd.inc \
	sfact.inc \
	sfinv.inc

libcernstuff_la_SOURCES =

libcernstuff_la_SOURCES += \
	$(noinst_HEADERS) \
	dfact.F \
	dfeqn.F \
	dfinv.F \
	dsinv.F \
	eisrs1d.F \
	tmprnt.F \
	tql2d.F \
	tred2d.F
