AM_FFLAGS   = -Wall -pedantic -W  -fno-f2c -O3 -funroll-loops

lib_LTLIBRARIES = liblapackstuff.la
liblapackstuff_la_SOURCES = \
		  ddot.f    \
		  dgemm.f   \
		  dgemv.f   \
		  dlauum.f  \
		  dlauu2.f  \
		  dposv.f   \
		  dpotf2.f  \
		  dpotrf.f  \
		  dpotri.f  \
		  dpotrs.f  \
		  dscal.f   \
		  dsyrk.f   \
		  dtrti2.f  \
		  dtrmm.f   \
		  dtrmv.f   \
		  dtrsm.f   \
		  dtrtri.f  \
		  ieeeck.f  \
		  ilaenv.f  \
		  lsame.f   \
		  xerbla.f  
